Move HTML files from src to sample.

--- a/sample/koma.html
+++ b/sample/koma.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="shogi.css" rel="stylesheet">
-<script src="shogi.js"></script>
+<link href="../src/shogi.css" rel="stylesheet">
+<script src="../src/shogi.js"></script>
 
 <style>
 .shogi__koma {
