Fix shogi.js to support Closure compilation.

--- a/sample/koma.html
+++ b/sample/koma.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="../src/shogi.css" rel="stylesheet">
-<script src="../src/shogi.js"></script>
+<script src="../src/shogi-compiled.js"></script>
 
 <style>
 .shogi__koma {
