--- a/samples/mochigoma_static.html
+++ b/samples/mochigoma_static.html
@@ -16,13 +16,13 @@
   margin: 10px;
 }
 
-#app .shogi__mochigomas.shogi__mochigomas--koutei {
+#app .shogi__mochigomas.shogi__mochigomas--gote {
   margin-left: 60px;
 }
 </style>
 
 <div id="app">
-  <div class="shogi__mochigomas shogi__mochigomas--koutei">
+  <div class="shogi__mochigomas shogi__mochigomas--gote">
     <div class="shogi__mochigoma">
       <div class="shogi__mochigoma__koma">
         <svg class="shogi__koma" viewBox="0 0 250 250">
