--- a/demo/builder/index.html
+++ b/demo/builder/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <h3>将棋UIビルダー</h3>
 
-    <div id="koutei_minus_buttons" class="minus_buttons">
+    <div id="gote_minus_buttons" class="minus_buttons">
       <div class="minus_button"><button>-</button></div>
       <div class="minus_button"><button>-</button></div>
       <div class="minus_button"><button>-</button></div>
@@ -22,10 +22,10 @@
       <div class="minus_button"><button>-</button></div>
       <div class="minus_button"><button>-</button></div>
     </div>
-    <div id="koutei_mochigomas" class="mochigomas"></div>
+    <div id="gote_mochigomas" class="mochigomas"></div>
     <div id="board"></div>
-    <div id="sentei_mochigomas" class="mochigomas"></div>
-    <div id="sentei_minus_buttons" class="minus_buttons">
+    <div id="sente_mochigomas" class="mochigomas"></div>
+    <div id="sente_minus_buttons" class="minus_buttons">
       <div class="minus_button"><button>-</button></div>
       <div class="minus_button"><button>-</button></div>
       <div class="minus_button"><button>-</button></div>
