--- a/samples/koma_static.html
+++ b/samples/koma_static.html
@@ -12,7 +12,7 @@
 }
 </style>
 
-<div id="koutei">
+<div id="gote">
   <svg class="shogi__koma" viewBox="0 0 250 250">
     <polygon points="125,238 195,208 235,0 15,0 55,208" fill="rgb(221,190,138)"></polygon>
     <polygon points="125,238 195,208 192,220 125,250 58,220 55,208" fill="rgb(133,111,83)"></polygon>
@@ -90,7 +90,7 @@
   </svg>
 </div>
 
-<div id="sentei">
+<div id="sente">
   <svg class="shogi__koma" viewBox="0 0 250 250">
     <polygon points="125,0 195,30 235,238 15,238 55,30" fill="rgb(221,190,138)"></polygon>
     <polygon points="15,238 235,238 232,250 18,250" fill="rgb(133,111,83)"></polygon>
