--- a/demo/builder/index.html
+++ b/demo/builder/index.html
@@ -66,7 +66,7 @@
   <script src="utility.js"></script>
   <script src="model.js"></script>
   <script src="hash.js"></script>
-  <script src="dom.js"></script>
+  <script src="builder.js"></script>
 </body>
 
 </html>
