--- a/demo/builder/index.html
+++ b/demo/builder/index.html
@@ -37,6 +37,7 @@
 
     <div class="buttons">
       <button id="reset_button">内容クリア</button>
+      <button id="viewer_button">ビュアーで見る</button>
     </div>
 
     <ol>
