Fix the copy function from viewer.

--- a/demo/builder/viewer.html
+++ b/demo/builder/viewer.html
@@ -7,6 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../../src/shogi.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
+  <style>
+    p {
+      margin: 5px 0;
+    }
+    #url_input {
+      box-sizing: border-box;
+      width: 100%;
+    }
+    .shogi__cell,
+    .shogi__koma {
+      cursor: default;
+    }
+  </style>
 </head>
 
 <body>
@@ -16,8 +29,13 @@
     <div id="sente_mochigomas" class="mochigomas"></div>
 
     <div class="buttons">
-      <button id="edit_button">編集</button>
-      <button id="url_copy_button">URLをコピー</button>
+      <p>
+        <button id="edit_button">編集</button>
+        <button id="url_copy_button">URLをコピー</button>
+      </p>
+      <p>
+        <input id="url_input" text="" readonly>
+      </p>
     </div>
   </div>
 
