--- a/demo/builder/viewer.html
+++ b/demo/builder/viewer.html
@@ -14,6 +14,7 @@
     #url_input {
       box-sizing: border-box;
       width: 100%;
+      font-size: 16px;
     }
     .shogi__cell,
     .shogi__koma {
